--- a/tests/unit/bash/bash_pkg_conditional_rpm.bats.jinja
+++ b/tests/unit/bash/bash_pkg_conditional_rpm.bats.jinja
@@ -11,6 +11,9 @@ function rpm()
     elif [[ "$*" ==  "-q --queryformat %{VERSION} coconut" ]] ; then
         echo "4.5.17"
         return 0
+    elif [[ "$*" ==  "-q --queryformat %{EPOCH} coconut" ]] ; then
+        echo "(none)"
+        return 0
     else
         echo "BATS mock for rpm doesn't support this command"
         return 1
@@ -23,32 +26,39 @@ export -f rpm
 }
 
 @test "bash_pkg_conditional_rpm - test package version" {
-    {{{ bash_pkg_conditional_rpm("coconut", "5", "<") | indent(4) }}}
-    {{{ bash_pkg_conditional_rpm("coconut", "5.0", "<") | indent(4) }}}
+    {{{ bash_pkg_conditional_rpm("coconut", "0:5", "<") | indent(4) }}}
+    {{{ bash_pkg_conditional_rpm("coconut", "0:5.0", "<") | indent(4) }}}
 
-    {{{ bash_pkg_conditional_rpm("coconut", "5", "<=") | indent(4) }}}
-    {{{ bash_pkg_conditional_rpm("coconut", "5.0", "<=") | indent(4) }}}
+    {{{ bash_pkg_conditional_rpm("coconut", "0:5", "<=") | indent(4) }}}
+    {{{ bash_pkg_conditional_rpm("coconut", "0:5.0", "<=") | indent(4) }}}
 
-    {{{ bash_pkg_conditional_rpm("coconut", "4.5.18", "<") | indent(4) }}}
+    {{{ bash_pkg_conditional_rpm("coconut", "0:4.5.18", "<") | indent(4) }}}
 
-    {{{ bash_pkg_conditional_rpm("coconut", "4.5.17", "<=") | indent(4) }}}
-    {{{ bash_pkg_conditional_rpm("coconut", "4.5.18", "<=") | indent(4) }}}
+    {{{ bash_pkg_conditional_rpm("coconut", "0:4.5.17", "<=") | indent(4) }}}
+    {{{ bash_pkg_conditional_rpm("coconut", "0:4.5.18", "<=") | indent(4) }}}
 
-    {{{ bash_pkg_conditional_rpm("coconut", "4.5.16", ">") | indent(4) }}}
-    {{{ bash_pkg_conditional_rpm("coconut", "4.1.1", ">") | indent(4) }}}
+    {{{ bash_pkg_conditional_rpm("coconut", "0:4.5.16", ">") | indent(4) }}}
+    {{{ bash_pkg_conditional_rpm("coconut", "0:4.1.1", ">") | indent(4) }}}
 
-    {{{ bash_pkg_conditional_rpm("coconut", "4.5.16", ">=") | indent(4) }}}
-    {{{ bash_pkg_conditional_rpm("coconut", "4.1.1", ">=") | indent(4) }}}
+    {{{ bash_pkg_conditional_rpm("coconut", "0:4.5.16", ">=") | indent(4) }}}
+    {{{ bash_pkg_conditional_rpm("coconut", "0:4.1.1", ">=") | indent(4) }}}
 
-    ! ( {{{ bash_pkg_conditional_rpm("coconut", "4.5.17", "!=") | indent(4) }}} )
+    ! ( {{{ bash_pkg_conditional_rpm("coconut", "0:4.5.17", "!=") | indent(4) }}} )
 
-    ! ( {{{ bash_pkg_conditional_rpm("coconut", "4.5.18", "==") | indent(4) }}} )
+    ! ( {{{ bash_pkg_conditional_rpm("coconut", "0:4.5.18", "==") | indent(4) }}} )
 
-    {{{ bash_pkg_conditional_rpm("coconut", "3", ">") | indent(4) }}}
-    {{{ bash_pkg_conditional_rpm("coconut", "3.0", ">") | indent(4) }}}
-    {{{ bash_pkg_conditional_rpm("coconut", "3.0.0", ">") | indent(4) }}}
+    {{{ bash_pkg_conditional_rpm("coconut", "0:3", ">") | indent(4) }}}
+    {{{ bash_pkg_conditional_rpm("coconut", "0:3.0", ">") | indent(4) }}}
+    {{{ bash_pkg_conditional_rpm("coconut", "0:3.0.0", ">") | indent(4) }}}
 
-    {{{ bash_pkg_conditional_rpm("coconut", "3", ">") | indent(4) }}}
-    {{{ bash_pkg_conditional_rpm("coconut", "3.0", ">=") | indent(4) }}}
-    {{{ bash_pkg_conditional_rpm("coconut", "3.0.0", ">=") | indent(4) }}}
+    {{{ bash_pkg_conditional_rpm("coconut", "0:3", ">") | indent(4) }}}
+    {{{ bash_pkg_conditional_rpm("coconut", "0:3.0", ">=") | indent(4) }}}
+    {{{ bash_pkg_conditional_rpm("coconut", "0:3.0.0", ">=") | indent(4) }}}
+
+    {{{ bash_pkg_conditional_rpm("coconut", "1:1.0", "<") | indent(4) }}}
+    {{{ bash_pkg_conditional_rpm("coconut", "1:5.0.4", "<") | indent(4) }}}
+    {{{ bash_pkg_conditional_rpm("coconut", "1:4.5.17", "!=") | indent(4) }}}
+    ! ( {{{ bash_pkg_conditional_rpm("coconut", "1:4.5.17", "==") | indent(4) }}} )
+    ! ( {{{ bash_pkg_conditional_rpm("coconut", "1:4.5", ">") | indent(4) }}} )
+    ! ( {{{ bash_pkg_conditional_rpm("coconut", "1:6.7", ">") | indent(4) }}} )
 }
