--- a/shared/macros/10-bash.jinja
+++ b/shared/macros/10-bash.jinja
@@ -1884,18 +1884,18 @@ optional version restricion, the Bash remediation will be applied. The macro
 respects `platform_package_overrides` variable.
 
 :param package: package name
-:param ver: package version (optional argument, use together with "op")
 :param op: version comparison operator ("<", "<=", "==", "!=", ">", ">=")
+:param ver: package version (optional argument, use together with "op")
 #}}
-{{%- macro bash_pkg_conditional(package, ver=None, op=None) -%}}
+{{%- macro bash_pkg_conditional(package, op=None, ver=None) -%}}
 {{%- if package in platform_package_overrides -%}}
   {{%- set package = platform_package_overrides[package] -%}}
 {{%- endif -%}}
   {{% if pkg_system is defined %}}
     {{%- if pkg_system == "rpm" -%}}
-        {{{ bash_pkg_conditional_rpm(package, ver, op) }}}
+        {{{ bash_pkg_conditional_rpm(package, op, ver) }}}
     {{%- elif pkg_system == "dpkg" -%}}
-        {{{ bash_pkg_conditional_dpkg(package, ver, op) }}}
+        {{{ bash_pkg_conditional_dpkg(package, op, ver) }}}
     {{%- else -%}}
 JINJA MACRO ERROR - Unknown package system '{{{ pkg_system }}}'.
     {{%- endif -%}}
@@ -1935,21 +1935,27 @@ The implementation uses the GNU `sort` version ordering, which is described at:
 https://www.gnu.org/software/coreutils/manual/coreutils.html#Version-sort-ordering
 
 :param real: real package version
-:param expected: expected package version
 :param op: version comparison operator ("<", "<=", "==", "!=", ">", ">=")
+:param expected: expected package version
 #}}
-{{%- macro bash_pkg_conditional_compare(real, expected, op) -%}}
-{ real="{{{ real }}}"; expected="{{{ expected }}}"; {{{ bash_compare_version("$real", "$expected", op) }}}; }
+{{%- macro bash_pkg_conditional_compare(real, op, expected) -%}}
+{ real="{{{ real }}}"; expected="{{{ expected }}}"; {{{ bash_compare_version("$real", op, "$expected") }}}; }
 {{%- endmacro -%}}
 
 {{#
 This macro generates comparison code based on the operator.
 
+Assumptions:
+- Version arguments are either literal, or they expand to versions (e.g. the argument is a deferenced variable)
+- Either all versions have epoch, or none of them has.
+  - Violation of this results in undefined behavior.
+  - If one has epoch e.g. 0, and the other one has no epoch, they will not be treated as equal.
+
 :param real: real package version
-:param expected: expected package version
 :param op: version comparison operator ("<", "<=", "==", "!=", ">", ">=")
+:param expected: expected package version
 #}}
-{{%- macro bash_compare_version(real, expected, op) -%}}
+{{%- macro bash_compare_version(real, op, expected) -%}}
 {{%- if op == "<" -%}}
 [[ "{{{ real }}}" != "{{{ expected }}}" ]] && printf "%s\n%s" "{{{ real }}}" "{{{ expected }}}" | sort -VC
 {{%- elif op == "<=" -%}}
@@ -1969,13 +1975,13 @@ printf "%s\n%s" "{{{ expected }}}" "{{{ real }}}" | sort -VC
 This macro creates a Bash conditional which uses rpm to check if a package passed as a parameter is installed.
 
 :param package: package name
+:param op: version comparison operator ("<", "<=", "==", "!=", ">", ">=")
 :param ver: package version (optional argument, use together with "op")
     The version always needs to contain epoch. If the package has no epoch, please prepend "0:".
-:param op: version comparison operator ("<", "<=", "==", "!=", ">", ">=")
 #}}
-{{%- macro bash_pkg_conditional_rpm(package, ver=None, op=None) -%}}
+{{%- macro bash_pkg_conditional_rpm(package, op=None, ver=None) -%}}
 {{%- if ver -%}}
-rpm --quiet -q {{{ package }}} && {{{ bash_pkg_conditional_compare(bash_get_rpm_package_version(package), ver, op) }}}
+rpm --quiet -q {{{ package }}} && {{{ bash_pkg_conditional_compare(bash_get_rpm_package_version(package), op, ver) }}}
 {{%- else -%}}
 rpm --quiet -q {{{ package }}}
 {{%- endif -%}}
@@ -1996,10 +2002,10 @@ This macro creates a Bash conditional that compares version of the DEB package
 with a given version.
 
 :param package: package name
-:param ver: package version (optional argument, use together with "op")
 :param op: version comparison operator ("<", "<=", "==", "!=", ">", ">=")
+:param ver: package version (optional argument, use together with "op")
 #}}
-{{%- macro bash_compare_version_dpkg(package, ver, op) -%}}
+{{%- macro bash_compare_version_dpkg(package, op, ver) -%}}
 {{%- set op_codes = ({"<":"lt", "<=":"le", "==":"eq", "!=":"ne", ">":"gt", ">=":"ge"}) -%}}
 { real="$({{{ bash_get_dpkg_package_version(package) }}})"; ver="{{{ ver }}}"; dpkg --compare-versions "$real" "{{{ op_codes[op] }}}" "$ver"; }
 {{%- endmacro -%}}
@@ -2008,12 +2014,12 @@ with a given version.
 This macro creates a Bash conditional which uses dpkg to check if a package passed as a parameter is installed.
 
 :param package: package name
-:param ver: package version (optional argument, use together with "op")
 :param op: version comparison operator ("<", "<=", "==", "!=", ">", ">=")
+:param ver: package version (optional argument, use together with "op")
 #}}
-{{%- macro bash_pkg_conditional_dpkg(package, ver=None, op=None) -%}}
+{{%- macro bash_pkg_conditional_dpkg(package, op=None, ver=None) -%}}
 {{%- if ver -%}}
-dpkg-query --show --showformat='${db:Status-Status}\n' '{{{ package }}}' 2>/dev/null | grep -q installed && {{{ bash_compare_version_dpkg(package, ver, op) }}}
+dpkg-query --show --showformat='${db:Status-Status}\n' '{{{ package }}}' 2>/dev/null | grep -q installed && {{{ bash_compare_version_dpkg(package, op, ver) }}}
 {{%- else -%}}
 dpkg-query --show --showformat='${db:Status-Status}\n' '{{{ package }}}' 2>/dev/null | grep -q installed
 {{%- endif -%}}
