Fix authselect check task
The a7cdf351071949a488c21de07fa2a341263abea8 caused an Ansible task to
fail by replacing the "ignore_errors" parameter by "failed_when" with an
additional condition. The intention was to satisfy ansible-lint. However
the task is used only to collect information and should never cause a
fatal error in Ansible Playbook. Instead, the result is properly tested
in subsequent tasks. This commit keeps the "failed_when" parameter in
order to satisfy the ansible-lint but change the condition to false.

--- a/shared/macros/10-ansible.jinja
+++ b/shared/macros/10-ansible.jinja
@@ -748,7 +748,7 @@ The following macro remediates Audit syscall rule in :code:`/etc/audit/audit.rul
     cmd: authselect check
   register: result_authselect_check_cmd
   changed_when: false
-  failed_when: result_authselect_check_cmd.rc not in [0, 3, 4]
+  failed_when: false
 
 - name: '{{{ rule_title }}} - Informative message based on the authselect integrity check result'
   ansible.builtin.assert:
