Fix tasks in ansible_sssd_ldap_config
The 733ef1ff839a4c0a545881fb7f6b5d63439f7a9d caused an Ansible task to
fail by replacing the "ignore_errors" parameter by "failed_when" with an
additional condition. The intention was to satisfy ansible-lint. However
the task is used only to collect information and should not cause a
fatal error in Ansible Playbook. Instead, the result is properly tested
in subsequent tasks. This commit keeps the "failed_when" parameter in
order to satisfy the ansible-lint but change the condition to false.

--- a/shared/macros/10-ansible.jinja
+++ b/shared/macros/10-ansible.jinja
@@ -641,15 +641,15 @@ The following macro remediates Audit syscall rule in :code:`/etc/audit/audit.rul
 - name: "Test for id_provider different than Active Directory (ad)"
   command: grep -qzosP '[[:space:]]*\[domain\/[^]]*]([^(\n)]*(\n)+)+?[[:space:]]*id_provider[[:space:]]*=[[:space:]]*((?i)ad)[[:space:]]*$' /etc/sssd/sssd.conf
   register: test_id_provider
-  failed_when: test_id_provider.rc not in [0, 1]
-  changed_when: False
+  failed_when: false
+  changed_when: false
   check_mode: no
 
 - name: "Test for domain group"
   command: grep '\s*\[domain\/[^]]*]' /etc/sssd/sssd.conf
   register: test_grep_domain
-  failed_when: test_grep_domain.rc not in [0, 1]
-  changed_when: False
+  failed_when: false
+  changed_when: false
   check_mode: no
 
 - name: "Add default domain group and set {{{ parameter }}} in sssd configuration (if no domain there)"
